# cell_automaton

./: Cargo.toml
benches/: benchmark.rs
kernels/: automaton.cu
src/: biome.rs  cell.rs  game.rs  lib.rs  main.rs  visualization.rs
