[package]
name = "cell_automaton"
version = "0.1.0"
edition = "2024"


[dependencies]
colored = "2"
rand = "0.9.2"
num_cpus = "1.1"
minifb = "0.24"
cudarc = { version = "0.12", features = ["driver", "nvrtc", "cuda-version-from-build-system"] }
criterion = "0.8.1"
divan = "0.1"

[[bench]]
name = "benchmark"
harness = false